--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,15 @@
-.gradle
-**/build/
-!src/**/build/
+.idea
+target/
+*.iml
 
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
-.gradletasknamecache
-
-# Eclipse Gradle plugin generated files
-# Eclipse Core
+#vscode
 .project
-# JDT-specific (Eclipse Java Development Tools)
 .classpath
+.factorypath
+.settings/
+.vscode
+bin/
+
+#gradle
+.gradle/
+build/
