--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,5 +29,7 @@ jobs:
         distribution: 'temurin'
     - name: Setup Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+    - name: Remove default github maven configuration
+      run: rm ~/.m2/settings.xml
     - name: Run build with Gradle Wrapper
       run: ./gradlew build
