--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,3 +33,21 @@ jobs:
       run: rm ~/.m2/settings.xml
     - name: Run build with Gradle Wrapper
       run: ./gradlew build
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3.0.0
+      with:
+        username: ${{ secrets.DOCKER_USER }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v5.3.0
+      with:
+        images: malla/configs-operator
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5.1.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
