Added operator metrics

--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.javaoperatorsdk:operator-framework-spring-boot-starter:5.0.0'
+    implementation 'io.javaoperatorsdk:micrometer-support:4.3.1'
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.12.0'
     annotationProcessor 'io.javaoperatorsdk:operator-framework:4.3.1'
     annotationProcessor 'io.fabric8:crd-generator-apt:6.5.1'
 
