GH-5 Switch to josdk managed dependent resource

--- a/install/cluster/Config-Operator.yaml
+++ b/install/cluster/Config-Operator.yaml
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: configs-operator
       containers:
         - name: operator
-          image: configs-operator:test_69
+          image: malla/configs-operator:latest
           resources:
             requests:
               memory: 512Mi
